[FIX] membership section pricing panel on small hight windows size.

--- a/source/assets/stylesheets/fabstrap/_main.scss
+++ b/source/assets/stylesheets/fabstrap/_main.scss
@@ -131,7 +131,7 @@ $youtube:       #e52d27;
 
 }
 
-@media only screen and (max-height : 600px) {
+@media only screen and (max-height : 800px) {
   .continer.pricing-table .pricing-panel *  { font-size: 13px !important;}
   .continer.pricing-table .pricing-panel h3 { font-size: 350% !important;}
 }
